2011-06-05  Kostas Nakos  <knakos@gmail.com>
* android/*: Implement extended key remapping,
             Support Xperia play keycodes,
             Remap dpad enter to break,
			 New NTSC/PAL tv mode preference


2011-05-22  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/USAGE, atari800.man, cassette.[ch], ui.c: Add an option for making the
  attached cassette image read-only.

* cassette.[ch]: Cleanup - rearrange function order to place the functions
  related to the SIO patch together at the bottom of the files.

* cartridge.[ch], ui.c: Merge "Insert Cartridge"/"Remove Cartridge" menu
  options into one, to make it consistent with other file-selectors in the
  menu (ie. display filename, Enter=Insert, BkSp=Remove). Ditto for the
  "Insert|Remove SDX Piggyback Cartridge" options.

* ui.c: Don't leave the "Cartridge Management" menu after inserting/removing
  a cartridge. The behaviour was inconsistent with other menus.

* screen.c: Minor fix - missing "else" in Screen_Initialise().


2011-05-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sio.c: Fixed a bug with SIO sounds remaining audible after saving to tape
  with SIO patch (reported by Krzysztof Karkosza).

* atari.c: During coldstart, don't automatically hold Option on non-XL/XE
  machines. This fixes unwanted keystrokes when running cartridges on 400/800
  with the "Disable Basic" option. Also, don't hold Start on booting the 5200.

* memory.c: Bugfix: When "Selecting System" and choosing 800/48KB RAM twice
  in a row, BASIC would get disabled even if the "Disable BASIC" option was
  set to "No". This was caused by missing initialisation of cartridge memory
  in MEMORY_InitialiseMachine().


2011-05-18  Tomasz Krasuski <kr0tki@poczta.onet.pl>
* cassette.c: Fixed a bug with CASSETTE_description not being properly ended
  with '\0' when tape is inserted (reported by Achim Haertel).


2011-05-15  Tomasz Krasuski <kr0tki@poczta.onet.pl>